namespace RiskEvaluation.Domain.Enums;

public enum RiskLevel
{
    Low,
    Medium,
    High,
    Critical
}