classDiagram
%% =====================
%% Namespace: Ingestion
%% =====================
namespace Ingestion.Domain {
  class DataSource {
    +Id: Guid
    +Name: string
    +Type: DataSourceTypeEnum
    +Endpoint: string
    +CollectionFrequency: CollectionFrequencyEnum
  }

  class DataCollection {
    +Id: Guid
    +DataSourceId: Guid
    +CollectedAt: DateTime
    +Payload: string
  }

  class SensorSample {
    +Id: Guid
    +DataCollectionId: Guid
    +SensorValue: double
    +Unit: string
    +RecordedAt: DateTime
  }
}

%% Relações de aggregate
DataSource "1" --> "N" DataCollection
DataCollection "1" --> "N" SensorSample

%% Enums
namespace Ingestion.Domain.Enums {
  class DataSourceType {
    <<enumeration>>
    Sensor
    Api
    File
    ExternalSystem
  }

  class CollectionFrequency {
    <<enumeration>>
    Hourly
    Daily
    Weekly
  }
}

%% Namespace de eventos (publicados para downstream)
namespace Ingestion.Application.Events {
    class SensorEventDetected {
      +CollectionId: Guid
      +EventType: string
      +Intensity: double
      +Latitude: double
      +Longitude: double
      +CollectedAt: DateTime
    }
}

%% =====================
%% Namespace: Risk Catalog
%% =====================
namespace RiskCatalog.Domain {
  class EventType {
    +Id: Guid
    +Code: string
    +Name: string
    +Description: string
    +IsActive: bool
  }

  class Severity {
    +Id: Guid
    +Level: SeverityLevelEnum
    +Description: string
  }

  class SeverityCriterion {
    +Id: Guid
    +EventTypeId: Guid
    +SeverityId: Guid
    +MinValue: double
    +MaxValue: double
    +Unit: string
    +Version: int
  }

  class RiskMatrix {
    +Id: Guid
    +EventTypeId: Guid
    +SeverityLevel: SeverityLevelEnum
    +RiskLevel: RiskLevelEnum
    +Version: int
  }

  class IDFCurve {
    +Id: Guid
    +EventTypeId: Guid
    +DurationMinutes: int
    +Intensity: double
    +ReturnPeriodYears: int
    +Version: int
  }

  class RegionalParameter {
    +Id: Guid
    +RegionId: Guid
    +AdjustmentFactor: double
    +Description: string
  }
}

EventType "1" --> "N" SeverityCriterion
Severity "1" --> "N" SeverityCriterion
EventType "1" --> "N" RiskMatrix
EventType "1" --> "N" IDFCurve
RiskMatrix --> EventType
IDFCurve --> EventType
RegionalParameter --> RiskMatrix

namespace RiskCatalog.Domain.Enums {
  class SeverityLevel {
    <<enumeration>>
    Low
    Moderate
    High
    Extreme
  }

  class RiskLevel {
    <<enumeration>>
    Low
    Medium
    High
    Critical
  }
}

namespace RiskCatalog.Application.DTOs {
  class EventTypeDTO {
    +Id: Guid
    +Code: string
    +Name: string
  }

  class SeverityCriterionDTO {
    +EventTypeCode: string
    +SeverityLevel: string
    +MinValue: double
    +MaxValue: double
    +Unit: string
    +Version: int
  }

  class RiskMatrixDTO {
    +EventTypeCode: string
    +SeverityLevel: string
    +RiskLevel: string
    +Version: int
  }
}

EventType --> EventTypeDTO
SeverityCriterion --> SeverityCriterionDTO
RiskMatrix --> RiskMatrixDTO

%% =====================
%% Namespace: Geospatial
%% =====================
namespace Geospatial {
  class RegionContext {
    +Latitude: int
    +Longitude: int
    +RegionId: Guid
    +TerrainType: string
    +Elevation: double
    +RiskZones: string[]
  }

  class RegionIntersected {
    +EventId: Guid
    +RegionId: Guid
    +RegionName: string
    +SusceptibilityLevel: string
  }
}

%% =====================
%% Namespace: Risk Evaluation
%% =====================
namespace RiskEvaluation {
  class RiskEvaluationEntity {
    +Id: Guid
    +Latitude: int
    +Longitude: int
    +Score: double
    +Level: string
    +Timestamp: DateTime
  }

  class RiskEvaluatedEvent {
    +EvaluationId: Guid
    +Latitude: int
    +Longitude: int
    +Score: double
    +Level: string
    +Timestamp: DateTime
  }

  class HighRiskDetectedEvent {
    +EvaluationId: Guid
    +Latitude: int
    +Longitude: int
    +Score: double
    +Level: string
    +Timestamp: DateTime
  }
}

%% =====================
%% Namespace: Alert Orchestrator
%% =====================
namespace AlertOrchestrator {
  class RiskUpdatedEvent {
    +EventId: Guid
    +Region: string
    +RiskType: string
    +RiskScore: double
    +TenantId: string?
    +Timestamp: DateTime
    +Metadata: Dictionary<string, string>
  }

  class AlertWindow {
    +Id: Guid
    +Region: string
    +RiskType: string
    +Status: string
  }
}

RiskEvaluation.RiskEvaluatedEvent --> AlertOrchestrator.RiskUpdatedEvent : fluxo esperado
RiskEvaluation.HighRiskDetectedEvent --> AlertOrchestrator.RiskUpdatedEvent : fluxo esperado
